# MLOps_Final_Project

./: .gitignore  Dockerfile  Dockerfile.prometheus  Makefile  README.md  app.py  pyproject.toml
.dvc/: config
.github/workflows/: CICD.yml
api/: api.py  metrics_recorder.py
data/interim/: .gitignore  dfi_2023-10-01_2024-12-01_V.1.0.parquet.dvc  dfi_2023-10-01_2025-10-01_V.1.0.parquet.dvc  dfi_ensemble_2022-07-01_2025-10-01_V.1.0.parquet.dvc  dfit_ensemble_2022-07-01_2025-10-01_V.1.0.parquet.dvc
data/processed/iter1/drift/: .gitignore  dfp_2023-10-01_2025-10-01_V.1.0.parquet.dvc
data/processed/iter1/test/: .gitignore  dfp_2024-10-01_2024-12-01_V.1.0.parquet.dvc
data/processed/iter1/train/: .gitignore  dfp_2023-10-01_2024-10-01_V.1.0.json.dvc  dfp_2023-10-01_2024-10-01_V.1.0.parquet.dvc
data/raw/: .gitignore  dfr_2022-07-01_2025-10-01.csv.dvc  dfr_2022-07-01_2025-10-01.parquet.dvc  ensemble_2022-07-01_2025-10-01.csv.dvc  ensemble_2022-07-01_2025-10-01.parquet.dvc
logic/: regressor.py
notebooks/: .gitignore  1_data_preparation.ipynb  2_create_toy_data.ipynb  3_random_forest_EDA.ipynb  4_iter1_split_data.ipynb  4_try_complex_stuff.ipynb  5_2_train_and_serialize.ipynb  5_calculate_drift_predictions.ipynb  5_train_and_serialize.ipynb  EDA.ipynb
production/model/: .gitignore  best_rf.onnx.dvc  categorical_metadata.json.dvc
scripts/: serialize.py  train.py
tests/: test_api.py  test_logic.py  test_metrics.py
utils/: __init__.py  utils.py
