[project]
name = "mlops-lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pyarrow>=22.0.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "optuna>=4.6.0",
    "mlflow>=3.8.1",
]
